force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/CC_Resumen_Facturacion_Mensual__c.object-meta.xml
<CustomObject>
    <label>Resumen Facturacion Mensual</label>
    <nameField>
        <label>Resumen Facturacion Mensual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumenes Facturacion Mensual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>