force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Area_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CC_Area_de_Negocio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Área de Negocio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>