force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Canal_de_Entrada__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_de_Entrada__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canal de Entrada</label>
    <length>80</length>
    <type>Text</type>
</CustomField>