force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Empresa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Empresa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>