force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Fecha_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Ejecucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Ejecucion</label>
    <type>DateTime</type>
</CustomField>