force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Numero_Casos__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Casos__c</fullName>
    <label>Numero Casos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>