force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Precio__c.field-meta.xml
<CustomField>
    <fullName>CC_Precio__c</fullName>
    <label>Precio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>