force-app/main/default/objects/CC_Resumen_Facturacion_Mensual__c/fields/CC_Suma_a_facturar__c.field-meta.xml
<CustomField>
    <fullName>CC_Suma_a_facturar__c</fullName>
    <label>Suma a facturar</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>